Fix:background image on iphone devices

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
 @import url("https://fonts.googleapis.com/css?family=Pathway+Gothic+One&display=swap");
-
+body{
+  height: 100%;
+  box-sizing: border-box;
+}
+.card-content{
+  color:white;
+}
 h4 {
   color: black;
 }
@@ -9,9 +15,10 @@ h4 {
   height: 300px;
 }
 .card {
-  height: 100vh;
-  width: 300px;
-  font-family: "Pathway Gothic One", sans-serif;
+  width: 100vw;
+  background: url(/static/media/tb.1ac4240d.gif) center center no-repeat;
+  height:100%;
+  background-size: cover;
 }
 
 hr {
@@ -35,30 +42,32 @@ hr {
 @media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) {
   html,
   body {
-    overflow-x: hidden;
-    overflow-y: hidden;
+    height: 100vh;
   }
   body {
-    position: relative;
+
   }
 
   .card {
-    height: 100vh;
-    width: 100vw;
+    
+   
   }
-  /* .day{
+  .day{
     position: relative;
     left:60px;
-  } */
+  }
 
   h2 {
-    font-size: 25px;
+    font-size: 15px;
   }
+
 
   .container {
     padding: 0;
     margin: 0;
     text-transform: uppercase;
+    background-size:cover;
+    
   }
   .description {
     font-size: 20px;
@@ -66,11 +75,7 @@ hr {
 }
 /* iphone 6,7,8 */
 @media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2) {
-  html,
-  body {
-    overflow-x: hidden;
-    overflow-y: hidden;
-  }
+
   body {
     position: relative;
   }
@@ -81,10 +86,14 @@ hr {
   }
 
   .container {
+    height: 100%;
     padding: 0;
     margin: 0;
     text-transform: uppercase;
+    background-size:cover
+
   }
+
 
   /* .day{
       position: relative;
@@ -110,8 +119,7 @@ hr {
 } */
 
 #weatherIcon {
-  position: relative;
-  left: 30px;
+
 }
 
 /* ----------- iPhone 5, 5S, 5C and 5SE ----------- */
